# radish

./: .gitignore  ARCHITECTURE.md  Cargo.toml  GETTING_STARTED.md  LICENSE  PROJECT_SUMMARY.md  README.md
.github/: dependabot.yml  markdown-link-check-config.json
.github/workflows/: benchmark.yml  docs.yml  python-ci.yml  release.yml  rust-ci.yml
examples/: read_cfradial.rs
python/: Cargo.toml  README.md  pyproject.toml
python/examples/: read_cfradial.py
python/radish/: __init__.py
python/radish/backends/: __init__.py  xarray_backend.py
python/src/: lib.rs
python/tests/: test_radish.py
radish/: Cargo.toml
radish/examples/: test_netcdf_open.rs
radish/src/: error.rs  lib.rs
radish/src/backends/: cfradial1.rs  mod.rs
radish/src/io/: mod.rs  netcdf_utils.rs
radish/src/model/: coordinates.rs  mod.rs  moment.rs  sweep.rs  volume.rs
radish/src/transforms/: georeference.rs  mod.rs
tests/: test_basic.rs
types/: Cargo.toml
types/src/: lib.rs
