[workspace]
members = [
    "radish",
    "python",
    "types",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Maxwell Grover <maxwell.grover@anl.gov>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mgrover1/radish"

[workspace.dependencies]
# Core dependencies
radish = { path = "radish" }
radish-types = { path = "types" }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Data structures
ndarray = "0.16"
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File I/O
hdf5 = "0.8"
netcdf = "0.9"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
